tests/compile_fail/state/foreign_struct_def_no_enter.stderr
error: a struct that is not defined in this module must manually implement the `Substate::enter` function
  --> tests/compile_fail/state/foreign_struct_def_no_enter.rs:19:10
   |
19 |     impl Substate<Top> for Bottom {}
   |          ^^^^^^^^
